[project]
name = "pythonsdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "allure-pytest>=2.14.3",
    "evaluationlib",
    "openta",
    "openta-pytest",
    "pytest>=8.4.1",
]

[tool.uv.sources]
evaluationlib = { path = "wheels/evaluationlib-24.1.2.post1.dev51-py311-none-any.whl" }
openta-pytest = { path = "wheels/openta_pytest-0.1.0-py3-none-any.whl" }
openta = { path = "wheels/openta-0.1.0-py3-none-any.whl" }

[tool.ruff]
line-length = 120

[tool.pyright]
stubPath = "./openta_stubs"
